# dgmark

./: Cargo.toml  LICENSE-3RD-PARTY  README.md
benches/: document.rs  full_document.rs
benches/inputs/: text_with_everything.md
dgmark/: Cargo.toml
dgmark-ffi/: Cargo.toml
dgmark-ffi/src/: lib.rs
dgmark-universal/: Cargo.toml
dgmark-universal/src/: lib.rs
dgmark-wasm/: Cargo.toml
dgmark-wasm/src/: lib.rs
dgmark-wasmtime/: Cargo.toml
dgmark-wasmtime/src/: lib.rs
dgmark/benches/: document.rs
dgmark/benches/inputs/: text_with_productlists.md  text_with_quotes.md
dgmark/src/: lib.rs  main.rs
examples/DgMarkCSharp/: DgMark.cs  DgMarkCSharp.sln  LICENSE-3RD-PARTY  README.md
examples/DgMarkCSharp/src/Bench/: Bench.csproj  Bencher.cs  Program.cs
examples/DgMarkCSharp/src/DgMarkFfi/: DgMarkFfi.cs  Program.cs
examples/DgMarkCSharp/src/DgMarkUniversalWasm/: DgMarkUniversalWasm.cs  DgMarkUniversalWasm.csproj  Program.cs
examples/DgMarkCSharp/src/DgMarkWasm/: DgMarkWasm.cs  DgMarkWasm.csproj  Program.cs
examples/dgmark-js/: .prettierrc  LICENSE-3RD-PARTY  README.md  package-lock.json  package.json  webpack.config.js
examples/dgmark-js/src/: helpers.js  index.js
examples/dgmark-js/static/: index.html  main.css
src/: common.rs  lib.rs  main.rs  productlist.rs  quote.rs  text.rs  traits.rs
