[package]
name = "dgmark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.0.0"
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "document"
harness = false
